Closed Bug 735380 Opened 14 years ago Closed 14 years ago

Signature switching in plaintext compose doesn't work

Categories

(Thunderbird :: Message Compose Window, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 13.0

People

(Reporter: mconley, Assigned: mconley)

References

Details

(Keywords: regression)

Attachments

(1 file, 2 obsolete files)

Fallout from bug 698925. STR: 1) Have two accounts, each with a distinct signature 2) Open a compose window in plaintext mode 3) The compose window should have one account's signature in the body of the message 4) Switch the "From" dropdown to the other account What happens? The signature does not change. What's expected? The signature should be updated to match the newly selected account. This is also causing a permanent orange on comm-central.
Assignee: nobody → mconley
Blocks: BigFiles
Keywords: regression
Attached patch Patch v1 (obsolete) — — Splinter Review
David: Am I on the right track? I felt a bit out of my depth inside nsMsgCompose.cpp. Did I miss any edge cases? The compose XPCShell tests seem to pass, and the composition Mozmill tests now all pass with this patch. -Mike
Attachment #605481 - Flags: review?(dbienvenu)
Attached patch Patch v2 (obsolete) — — Splinter Review
Forgot to fix some whitespace issues.
Attachment #605481 - Attachment is obsolete: true
Attachment #605483 - Flags: review?(dbienvenu)
Attachment #605481 - Flags: review?(dbienvenu)
Comment on attachment 605483 [details] [diff] [review] Patch v2 this tests correctly for me, so r=me, modulo the extra blank line before the sig in plain text mode.
Attachment #605483 - Flags: review?(dbienvenu) → review+
Thanks! Axing extra linebreaks.
Attachment #605483 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 13.0
Depends on: 765803
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: