Bug 735380 - Fix signature switching in plaintext compose windows. r=bienvenu.